--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Underwood</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aldrich">
+    <link rel="stylesheet" href="assets/css/Footer-Dark.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
@@ -45,6 +47,33 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="footer-dark" style="background-color: #000000;">
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3 style="color: rgba(95,165,217,0.7);">Services</h3>
+                        <ul>
+                            <li><a href="#" style="color: rgba(95,165,217,0.7);">Store placement</a></li>
+                            <li><a href="#" style="color: rgba(95,165,217,0.7);">Appartment rentals</a></li>
+                            <li><a href="#" style="color: rgba(95,165,217,0.7);">DJ Hosting</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-3 item">
+                        <h3 style="color: rgba(121,70,205,0.9);">[system active]</h3>
+                    </div>
+                    <div class="col-md-6 item text">
+                        <h3 style="color: rgba(231,87,217,0.7);">Sheila Fireguard</h3>
+                        <p style="color: rgba(231,87,217,0.7);opacity: 0.80;">Mayor, owner and gracious host who keeps underwood going.<br>If you see her on sim feel free to say hi, the mayor always enjoys meeting new people.<br>Should you require any help them please contact one of the staff a list is linked
+                            above or use one of our social media channels.</p>
+                    </div>
+                    <div class="col item social"><a href="https://www.facebook.com/groups/1474248769538964/" style="color: rgba(121,70,205,0.9);"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter" style="color: #282d32;"></i></a><a href="https://discord.gg/ZG7GsM"
+                            style="color: rgba(231,87,217,0.7);"><i class="icon ion-android-chat"></i></a><a href="#"><i class="icon ion-email" style="color: #282d32;"></i></a></div>
+                </div>
+                <p class="copyright" style="color: rgba(121,70,205,0.9);">Unforgotten-Underwood © 2018</p>
+            </div>
+        </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
