--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </div>
         </div>
     </nav>
-    <div style="padding: 100px;background-color: #000000;">
-        <div class="container">
+    <div style="padding: 25px;background-color: #000000;">
+        <div class="container" style="padding: 75px 10px;">
             <div class="row">
-                <div class="col-12 col-md-12"><img src="assets/img/logo.svg"></div>
+                <div class="col-12 col-md-12" style="padding: 0px;"><img src="assets/img/logo.svg"></div>
             </div>
             <div class="row">
                 <div class="col-md-4 text-center">
