--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
     </div>
     </nav>
     </div>
-    <div style="padding: 25px 10px;background-color: #000000;">
+    <div class="d-flex flex-grow-1 flex-shrink-1" style="padding: 25px 10px;background-color: #ffffff;background-image: url(&quot;assets/img/City%20Backdrop.jpg&quot;);">
         <div class="container" style="padding: 50px 10px;">
             <div class="row">
-                <div class="col-12 col-md-12" style="padding: 0px;"><img src="assets/img/logo.svg"></div>
+                <div class="col-12 col-md-12" style="padding: 10px;"><img class="d-xl-flex flex-fill justify-content-xl-center align-items-xl-center" src="assets/img/logo.svg"></div>
             </div>
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <p class="d-inline float-left d-xl-flex justify-content-xl-center align-items-xl-center" style="font-family: Aldrich, sans-serif;color: rgba(121,70,205,0.9);">Hello and welcome to unforgotten underwood.<br><br>Underwood Colony is a sim inside the game SecondLife.<br><br>We are a role play sim that allows people to create their own role play based on some basic history of the sim we have
-                        set out for you.<br><br>More information about the sim itself and rules are available here on the site along with interactions you can do while not on the sim itself.<br><br>In time we will be adding aditional interactions and
+                    <p class="d-inline float-left d-xl-flex justify-content-xl-center align-items-xl-center" style="font-family: Aldrich, sans-serif;color: rgba(121,70,205,0.9);background-color: rgba(0,0,0,0.75);">Hello and welcome to unforgotten underwood.<br><br>Underwood Colony is a sim inside the game SecondLife.<br><br>We are a role play sim that allows people to create their own role play based on some basic history of the sim we have
+                        set out for you.<br><br>More information about the sim itself and rules are available here on the site along with interactions you can do while not on the sim itself.<br><br>In time we will be adding additional interactions and
                         games on the sim so you can enjoy underwood colony even when away from your PC.</p>
                 </div>
                 <div class="col-md-4">
-                    <p class="text-center" style="font-family: Aldrich, sans-serif;color: rgba(231,87,217,0.7);">The colony itself is set into 10 primary areas.<br><br>You can view a map and history of each area on the MAP link above.<br><br>Each area has its own distinct theme and style.<br><br>There is a lot to discover in each area so exploration
+                    <p class="text-center" style="font-family: Aldrich, sans-serif;color: rgba(231,87,217,0.7);background-color: rgba(0,0,0,0.75);">The colony itself is set into 10 primary areas.<br><br>You can view a map and history of each area on the MAP link above.<br><br>Each area has its own distinct theme and style.<br><br>There is a lot to discover in each area so exploration
                         and investigation is always advised.<br><br>Many things on the sim work as you would expect in the real world so feel free to interact with items you come across while exploring, some may lead you on interesting quests.<br><br>^__^</p>
                 </div>
-                <div class="col-md-4">
-                    <p class="text-center" style="font-family: Aldrich, sans-serif;color: rgba(95,165,217,0.7);">Currently we are working towards a connection system to link the website here with special terminals that are located in the airpad and docking station area.<br><br>Due to some technical limitations these are not fully operational.<br><br>As
+                <div class="col-md-4" style="background-color: rgba(0,0,0,0.5);">
+                    <p class="text-center" style="font-family: Aldrich, sans-serif;color: rgba(95,165,217,0.7);background-color: rgba(0,0,0,0.75);">Currently we are working towards a connection system to link the website here with special terminals that are located in the airpad and docking station area.<br><br>Due to some technical limitations these are not fully operational.<br><br>As
                         part of the colonies 30th aniversary celebrations we expect these to be fully operational by mid cycle and we appreciate your patience dueing this time.<br><br>As part of the renovations you may notice several areas of the colony
                         under maintenance, we apologise for any inconvience this may cause.<br><br>Work will be completed by mid cycle.</p>
                 </div>
