--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body style="background-color: #000000;">
     <div>
-        <nav class="navbar navbar-light navbar-expand-md navigation-clean" style="background-color: rgba(255,255,255,0);padding: 5px;">
-            <div class="container"><a class="navbar-brand text-left d-flex flex-grow-1 flex-shrink-1 flex-fill justify-content-start align-items-center align-content-center align-self-center flex-nowrap" href="#"><img class="d-table d-sm-flex flex-grow-1 flex-shrink-1 justify-content-sm-center align-items-sm-center" src="assets/img/logo.svg" data-bs-hover-animate="flash"></a>
+        <nav class="navbar navbar-light navbar-expand-md sticky-top text-center d-flex d-md-flex justify-content-md-center align-items-md-center navigation-clean" style="background-color: rgba(255,255,255,0);padding: 5px;">
+            <div class="container-fluid"><a class="navbar-brand text-left flex-grow-1 flex-shrink-1 align-items-start align-content-start align-self-center flex-nowrap" href="#"><img class="d-table d-sm-flex flex-grow-1 flex-shrink-1 justify-content-sm-center align-items-sm-center" src="assets/img/logo.svg" data-bs-hover-animate="flash"></a>
                 <button
                     class="navbar-toggler" data-toggle="collapse" data-target="#navcol-1" style="padding: 10px;color: rgba(136,136,136,0);font-size: 15px;"><span class="sr-only" style="color: rgba(121,70,205,0.9);">Toggle navigation</span><span class="navbar-toggler-icon text-center" style="color: rgba(121,70,205,0.9);font-family: Aldrich, sans-serif;background-color: rgba(121,70,205,0.9);"></span></button>
                     <div
@@ -31,7 +31,7 @@
     </div>
     </nav>
     </div>
-    <div class="d-flex flex-grow-1 flex-shrink-1" style="padding: 25px 10px;background-color: #ffffff;background-image: url(&quot;assets/img/City%20Backdrop.jpg&quot;);">
+    <div class="text-center d-flex flex-grow-1 flex-shrink-1 flex-fill align-content-center flex-nowrap" style="padding: 25px 10px;background-color: rgba(255,255,255,0);background-image: url(&quot;assets/img/City%20Backdrop.jpg&quot;);filter: grayscale(0%) hue-rotate(0deg) invert(0%) sepia(0%);">
         <div class="container" style="padding: 50px 10px;">
             <div class="row">
                 <div class="col-12 col-md-12" style="padding: 10px;"><img class="d-xl-flex flex-fill justify-content-xl-center align-items-xl-center" src="assets/img/logo.svg"></div>
