--- a/Laws.html
+++ b/Laws.html
@@ -38,18 +38,16 @@
             </div>
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <p class="d-xl-flex justify-content-xl-center align-items-xl-center" style="font-family: Aldrich, sans-serif;color: rgba(121,70,205,0.9);background-color: rgba(0,0,0,0.75);">Hello and welcome to unforgotten underwood.<br><br>Underwood Colony is a sim inside the game SecondLife.<br><br>We are a role play sim that allows people to create their own role play based on some basic history of the sim we have
-                        set out for you.<br><br>More information about the sim itself and rules are available here on the site along with interactions you can do while not on the sim itself.<br><br>In time we will be adding additional interactions and
-                        games on the sim so you can enjoy underwood colony even when away from your PC.</p>
+                    <p class="text-center d-xl-flex justify-content-xl-center align-items-xl-center" style="font-family: Aldrich, sans-serif;color: rgba(121,70,205,0.9);background-color: rgba(0,0,0,0.75);">Rules 1.&nbsp;<br><br>You shall not be naughty!<br><br>You will not use the word moist<br><br>You will not take these rules seriously<br><br>You will not run with an egg<br><br>Robots are not for making toast<br><br>Dony cry if you
+                        break your shoe<br><br>Warning Roads slippery when raining<br><br>Warning Hot toast is Hot!<br><br>Dont drink and talk!<br><br>Drive on the right please.</p>
                 </div>
                 <div class="col-md-4">
-                    <p class="text-center" style="font-family: Aldrich, sans-serif;color: rgba(231,87,217,0.7);background-color: rgba(0,0,0,0.75);">The colony itself is set into 10 primary areas.<br><br>You can view a map and history of each area on the MAP link above.<br><br>Each area has its own distinct theme and style.<br><br>There is a lot to discover in each area so exploration
-                        and investigation is always advised.<br><br>Many things on the sim work as you would expect in the real world so feel free to interact with items you come across while exploring, some may lead you on interesting quests.<br><br>^__^</p>
+                    <p class="text-center" style="font-family: Aldrich, sans-serif;color: rgba(231,87,217,0.7);background-color: rgba(0,0,0,0.75);">Rules 2.<br><br>Dont wear boring colours!<br><br>Do griefing people!<br><br>No flying vehicles - Hovering is ok<br><br>No underage avatars<br><br>No weapons unless supplied by experience<br><br>No overly laggy avatars<br><br>No overly
+                        scripted avatars<br><br>No shoes with 500 scripts in<br><br>try and be nice<br><br>^__^</p>
                 </div>
                 <div class="col-md-4" style="background-color: rgba(0,0,0,0.5);">
-                    <p class="text-center" style="font-family: Aldrich, sans-serif;color: rgba(95,165,217,0.7);background-color: rgba(0,0,0,0.75);">Currently we are working towards a connection system to link the website here with special terminals that are located in the airpad and docking station area.<br><br>Due to some technical limitations these are not fully operational.<br><br>As
-                        part of the colonies 30th aniversary celebrations we expect these to be fully operational by mid cycle and we appreciate your patience dueing this time.<br><br>As part of the renovations you may notice several areas of the colony
-                        under maintenance, we apologise for any inconvience this may cause.<br><br>Work will be completed by mid cycle.</p>
+                    <p class="text-center" style="font-family: Aldrich, sans-serif;color: rgba(95,165,217,0.7);background-color: rgba(0,0,0,0.75);">Rules 3.<br><br>No exactly rules but just a notice, this site is currently in development as is the sim.<br><br>As such if you see things that look unfinished and incomplete please do not message the staff about it, we are most likely
+                        very aware.<br><br>We will send a notice when the sim is complete so feel free to join the group.<br><br>If you still see the issue after that point you may then message a staff member to advise them,<br><br>Thank you.</p>
                 </div>
             </div>
         </div>
@@ -71,8 +69,7 @@
                     </div>
                     <div class="col-md-6 item text">
                         <h3 style="color: rgba(231,87,217,0.7);">Sheila Fireguard</h3>
-                        <p style="color: rgba(231,87,217,0.7);opacity: 0.80;">Mayor, owner and gracious host who keeps underwood going.<br>If you see her on sim feel free to say hi, the mayor always enjoys meeting new people.<br>Should you require any help them please contact one of the staff a list is linked
-                            above or use one of our social media channels.</p>
+                        <p class="text-center" style="color: rgba(231,87,217,0.7);opacity: 0.80;">If sheila catches you being naughty then you not only get placed on the naughty list but we will bug you anytime we see you doing the bumpy pixels on the sim!<br>&nbsp;You have been warned.. play nice!<br>:P</p>
                     </div>
                     <div class="col item social"><a href="https://www.facebook.com/groups/1474248769538964/" style="color: rgba(121,70,205,0.9);"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter" style="color: #282d32;"></i></a><a href="https://discord.gg/ZG7GsM"
                             style="color: rgba(231,87,217,0.7);"><i class="icon ion-android-chat"></i></a><a href="#"><i class="icon ion-email" style="color: #282d32;"></i></a></div>
